// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with first config 1`] = `
"<p>This is the body with a footnote<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup> or two<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup> or more<sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup> <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup> <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>.</p>
<p>Also a reference that does not exist<sup id=\\"fnref-6\\"><a href=\\"#fn-6\\" class=\\"footnote-ref\\">6</a></sup>.</p>
<p>Second line of first paragraph.
And then third...</p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">
<p>Footnote that ends with a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
</ul>
<p><a href=\\"#fnref-1\\" class=\\"footnote-backref\\" title=\\"Foo bar 1\\">↩</a></p>
</li>
<li id=\\"fn-2\\">
<blockquote>
<p>This footnote is a blockquote.</p>
</blockquote>
<p><a href=\\"#fnref-2\\" class=\\"footnote-backref\\" title=\\"Foo bar 2\\">↩</a></p>
</li>
<li id=\\"fn-3\\">
<p>A simple oneliner.<a href=\\"#fnref-3\\" class=\\"footnote-backref\\" title=\\"Foo bar 3\\">↩</a></p>
</li>
<li id=\\"fn-4\\">
<p>A footnote with multiple paragraphs.</p>
<p>Paragraph two.<a href=\\"#fnref-4\\" class=\\"footnote-backref\\" title=\\"Foo bar 4\\">↩</a></p>
</li>
<li id=\\"fn-5\\">
<p>First line of first paragraph.
Second line of the footnote : nice!<a href=\\"#fnref-5\\" class=\\"footnote-backref\\" title=\\"Foo bar 5\\">↩</a></p>
</li>
</ol>
</div>"
`;

exports[`renders correctly with second config 1`] = `
"<p>This is the body with a footnote<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup> or two<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup> or more<sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup> <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup> <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>.</p>
<p>Also a reference that does not exist<sup id=\\"fnref-6\\"><a href=\\"#fn-6\\" class=\\"footnote-ref\\">6</a></sup>.</p>
<p>Second line of first paragraph.
And then third...</p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">
<p>Footnote that ends with a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
</ul>
<p><a href=\\"#fnref-1\\" class=\\"footnote-backref\\" title=\\"Baz 1 qux?\\">↩</a></p>
</li>
<li id=\\"fn-2\\">
<blockquote>
<p>This footnote is a blockquote.</p>
</blockquote>
<p><a href=\\"#fnref-2\\" class=\\"footnote-backref\\" title=\\"Baz 2 qux?\\">↩</a></p>
</li>
<li id=\\"fn-3\\">
<p>A simple oneliner.<a href=\\"#fnref-3\\" class=\\"footnote-backref\\" title=\\"Baz 3 qux?\\">↩</a></p>
</li>
<li id=\\"fn-4\\">
<p>A footnote with multiple paragraphs.</p>
<p>Paragraph two.<a href=\\"#fnref-4\\" class=\\"footnote-backref\\" title=\\"Baz 4 qux?\\">↩</a></p>
</li>
<li id=\\"fn-5\\">
<p>First line of first paragraph.
Second line of the footnote : nice!<a href=\\"#fnref-5\\" class=\\"footnote-backref\\" title=\\"Baz 5 qux?\\">↩</a></p>
</li>
</ol>
</div>"
`;

exports[`renders correctly without config 1`] = `
"<p>This is the body with a footnote<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup> or two<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup> or more<sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup> <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup> <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>.</p>
<p>Also a reference that does not exist<sup id=\\"fnref-6\\"><a href=\\"#fn-6\\" class=\\"footnote-ref\\">6</a></sup>.</p>
<p>Second line of first paragraph.
And then third...</p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">
<p>Footnote that ends with a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
</ul>
<p><a href=\\"#fnref-1\\" class=\\"footnote-backref\\" title=\\"1\\">↩</a></p>
</li>
<li id=\\"fn-2\\">
<blockquote>
<p>This footnote is a blockquote.</p>
</blockquote>
<p><a href=\\"#fnref-2\\" class=\\"footnote-backref\\" title=\\"2\\">↩</a></p>
</li>
<li id=\\"fn-3\\">
<p>A simple oneliner.<a href=\\"#fnref-3\\" class=\\"footnote-backref\\" title=\\"3\\">↩</a></p>
</li>
<li id=\\"fn-4\\">
<p>A footnote with multiple paragraphs.</p>
<p>Paragraph two.<a href=\\"#fnref-4\\" class=\\"footnote-backref\\" title=\\"4\\">↩</a></p>
</li>
<li id=\\"fn-5\\">
<p>First line of first paragraph.
Second line of the footnote : nice!<a href=\\"#fnref-5\\" class=\\"footnote-backref\\" title=\\"5\\">↩</a></p>
</li>
</ol>
</div>"
`;
